2008-10-28  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by David Kilzer.

        https://bugs.webkit.org/show_bug.cgi?id=2192
        Missing semi-colons in Geoposition.idl

        * page/Geoposition.idl: Add missing semi-colons

2008-10-28  Timothy Hatcher  <timothy@apple.com>

        Make the Profiles panel in the Web Inspector have an enable screen.
        Profiling now needs to be enabled before console.profile() works.

        <rdar://problem/6211578> Make the JavaScript profiler opt-in, so it does
        not slow down JavaScript all the time

        Reviewed by Darin Adler and Kevin McCullough.

        * English.lproj/localizedStrings.js: New strings.
        * WebCore.base.exp: New and changed exports.
        * WebCore.vcproj/WebCore.vcproj: Add the PanelEnablerView.js file.
        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::supportsProfiling): Call InspectorController:profilerEnabled.
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::InspectorController): Initialize the m_startProfiling
        Timer to call InspectorController::startUserInitiatedProfiling.
        (WebCore::InspectorController::startUserInitiatedProfilingSoon): Start a one-shot timer
        that calls InspectorController::startUserInitiatedProfiling.
        (WebCore::InspectorController::startUserInitiatedProfiling): Recompile all JavaScript
        and enable the profiler if the profiler was not enabled.
        (WebCore::InspectorController::stopUserInitiatedProfiling): Rearrange code for readability.
        (WebCore::InspectorController::enableProfiler): Recompile all the JavaScript functions
        if the skipRecompile argument is false. Call the profilerWasEnabled script function.
        (WebCore::InspectorController::disableProfiler): Recompile all the JavaScript functions.
        Call the profilerWasEnabled script function.