@@ -2,6 +2,15 @@
 
         Reviewed by David Kilzer.
 
+        https://bugs.webkit.org/show_bug.cgi?id=21932
+        Add non-pointer constant lookups to SoftLinking.h
+
+        * platform/mac/SoftLinking.h:
+
+2008-10-28  Greg Bolsinga  <bolsinga@apple.com>
+
+        Reviewed by David Kilzer.
+
         https://bugs.webkit.org/show_bug.cgi?id=2192
         Missing semi-colons in Geoposition.idl
 
